2010-06-10 Pierre Wieser <pwieser@trychlos.org>

	* Changelog: Update NEWS before release.

	* configure.ac: Bump pre-release version number.

	* src/core/na-iabout.c: Update copyright notice.

2010-05-17 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Fix typo.

	* src/core/na-core-utils.c (na_core_utils_slist_from_array):
	Strip the strings extracted from the array.

	* src/core/na-factory-object.c (na_factory_object_are_equal):
	Dump the data when different.

	* src/nact/nact-main-menubar-file.c
	(nact_main_menubar_file_save_items): Add a debug message.

	* src/api/na-object-api.h (na_object_set_last_version):
	* src/api/na-object-action.h:
	* src/core/na-object-action.c (na_object_action_set_last_version):
	New functions.

	* src/core/na-object-action.c (convert_pre_v2_action):
	Reset action to last version number after conversion from pre-v2.

	* src/core/na-object-profile.c (na_object_profile_parse_parameters):
	Do not add extraneous blanks when parsing parameters.

	* configure.ac: Post release bump version number.

	* src/io-desktop/nadp-reader.c (read_done_load_profiles):
	Do not reload already loaded profiles.
	Just ignore non-referenced profiles.

	* src/io-gconf/nagp-reader.c
	(read_done_action_load_profiles_from_list): Do not reload already loaded profiles.

	* src/utils/nautilus-actions-new.c:
	Factorize error message to make translation easier.

	* src/utils/nautilus-actions-run.c:
	Mark two new strings for translation.

	* src/core/na-object-action-factory.c:
	No more set a string version.

	* src/io-gconf/nagp-reader.c (read_done_profile_attach_profile):
	Test both string and integer versions.

2010-05-12 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-icontext.h:
	* src/core/na-icontext.c
	(na_icontext_have_all_mimetypes): Removed function.
	(na_icontext_read_done): New function.

	* src/core/na-object-action.c:
	* src/core/na-object-menu.c:
	* src/core/na-object-profile.c: Updated accordingly.

	* src/api/na-object-api.h