@@ -6,6 +6,11 @@
 
 	* src/core/na-iabout.c: Update copyright notice.
 
+2010-05-20 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/io-desktop/nadp-reader.c
+	(nadp_reader_ifactory_provider_read_start): Removed function.
+
 2010-05-17 Pierre Wieser <pwieser@trychlos.org>
 
 	* configure.ac: Fix typo.
